# face-detection-streamlit

Desktop/PYTHON/: projet3.py
Desktop/PYTHON/diabete/: Makefile  README.md  pyproject.toml  requirements.txt
Desktop/PYTHON/diabete/diabete/: __init__.py  dataset.py  features.py  plots.py
Desktop/PYTHON/diabete/diabete/modeling/: predict.py  train.py
Desktop/PYTHON/diabete/docs/: mkdocs.yml
Desktop/PYTHON/diabete/docs/docs/: index.md
Desktop/PYTHON/face-detection-streamlit/: app.py  requirements.txt
